[package]
name = "pluto"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.46"
xxhash-rust = { version="0.8", features=["xxh3"] }
serde_json = "1.0"
serde = "1.0"
clap = { version="3.2", features=["derive"] }
